# MPCNS_Mercury

./: .gitignore  CMakeLists.txt
Z0_CoreDebug/: CMakeLists.txt
Z0_CoreDebug/include/: Z0_CouplingTests.h  Z0_Diagnostics.h  Z0_Initializer.h  Z0_OutputTests.h
Z0_CoreDebug/src/: Z0_Config.cpp  Z0_Diagnostics.cpp  Z0_FieldCatalog.cpp  Z0_Initializer.cpp  Z0_OutputTests.cpp  Z0_Runner.cpp  Z0_SyncTests.cpp
Z0_NULL/: CMakeLists.txt  README.md  main.cpp  run_halo_validation.sh
Z0_NULL/CASE/setup/: 0_General_Setting.txt  2_Boundary_Condition.txt  filenames
Z0_NULL/Test/common/: Z0_TestCommon.h
Z0_NULL/Test/halo_comm/: Z0_HaloCommTest.cpp
Z0_NULL/Test/topology/: Z0_TopologyTest.cpp
Z0_NULL/include/: NullFrameworkTest.h  Z0_Boundary.h  Z0_Const.h  Z0_Control.h  Z0_Diagnostics.h  Z0_FieldCatalog.h  Z0_Initial.h  Z0_NullConfig.h  Z0_NullDiagnostics.h  Z0_NullFieldCatalog.h  Z0_NullIO.h  Z0_NullInitializer.h  Z0_NullRunner.h  Z0_Solver.h  Z0_Tests.h
Z0_NULL/src/: NullFrameworkTest.cpp  Z0_Control.cpp  Z0_Diagnostics.cpp  Z0_FieldCatalog.cpp  Z0_Initial.cpp  Z0_NullConfig.cpp  Z0_NullDiagnostics.cpp  Z0_NullFieldCatalog.cpp  Z0_NullIO.cpp  Z0_NullInitializer.cpp  Z0_NullRunner.cpp  Z0_Solver.cpp  Z0_Solver_Advance.cpp  Z0_Solver_Driver.cpp  Z0_Solver_Setup.cpp
Z0_NULL/src/boundary/: Z0_Boundary.cpp  Z0_Boundary_Coupling.cpp  Z0_Boundary_Physical.cpp  Z0_Boundary_Sync.cpp
Z0_NULL/src/physics/: Z0_Flux.cpp  Z0_RHS.cpp  Z0_Source.cpp  Z0_Timestep.cpp
Z0_NULL/test/dec_chain/: Z0_DecChainTest.cpp
Z0_NULL/test/halo_comm/: Z0_HaloCommTest.cpp
Z0_NULL/test/physical_io/: Z0_PhysicalIoTest.cpp
Z1_NULL/: CMakeLists.txt  README.md  main.cpp
Z1_NULL/CASE/: setup
Z1_NULL/include/: Z1_Boundary.h  Z1_Const.h  Z1_Control.h  Z1_Diagnostics.h  Z1_FieldCatalog.h  Z1_Initial.h  Z1_Solver.h
Z1_NULL/src/: Z1_Control.cpp  Z1_Diagnostics.cpp  Z1_FieldCatalog.cpp  Z1_Initial.cpp  Z1_Solver.cpp  Z1_Solver_Advance.cpp  Z1_Solver_Driver.cpp  Z1_Solver_Setup.cpp
Z1_NULL/src/boundary/: Z1_Boundary.cpp  Z1_Boundary_Coupling.cpp  Z1_Boundary_Physical.cpp  Z1_Boundary_Sync.cpp
Z1_NULL/src/physics/: Z1_Flux.cpp  Z1_RHS.cpp  Z1_Source.cpp  Z1_Timestep.cpp
Z1_Test/: CMakeLists.txt  README.md
Z1_Test/common/: Z1_Test_Common.h
Z1_Test/dec_operator_test/: CMakeLists.txt  dec_operator_test.cpp
Z1_Test/halo_form_test/: CMakeLists.txt  halo_form_test.cpp
Z1_Test/metric_hodge_test/: CMakeLists.txt  metric_hodge_test.cpp
Z1_Test/topo_test/: CMakeLists.txt  topo_test.cpp
Z2_Test/: CMakeLists.txt  main.cpp
Z2_Test/include/: Z0_Config.h  Z0_Diagnostics.h  Z0_FieldCatalog.h  Z0_Initializer.h  Z0_Runner.h  Z0_SyncTests.h
Z2_Test/src/: Z0_Config.cpp  Z0_CouplingTests.cpp  Z0_Diagnostics.cpp  Z0_FieldCatalog.cpp  Z0_Initializer.cpp  Z0_OutputTests.cpp  Z0_Runner.cpp
Z3_Lunar/: CMakeLists.txt  README.md  main.cpp
Z3_Lunar/9999setup/: 0_General_Setting.txt  1_Initial_condition.txt  2_Boundary_Condition.txt  3_MHD_Control.txt  filenames
Z3_Lunar/include/: 00_Lunar_Const.h  0_BackgroundState.h  0_LunarFieldCatalog.h  0_SolverFields.h  1_Boundary.h  2_Initial.h  3_Control.h  LunarCase.h  LunarGridValidation.h  LunarPhysicsTypes.h  LunarSolver.h
Z3_Lunar/src/: LunarCase.cpp  LunarGridValidation.cpp  LunarSolver.cpp  LunarSolver_Driver.cpp  LunarSolver_ReconstructionSetup.cpp  LunarSolver_Setup.cpp  LunarSolver_Tecplot.cpp  MPCNSSolver_Debug.cpp
Z4_Mercury/: CMakeLists.txt  README.md  main.cpp
Z4_Mercury/9999setup/: 0_General_Setting.txt  1_Initial_condition.txt  2_Boundary_Condition.txt  3_MHD_Control.txt
Z4_Mercury/include/: 00_Mercury_Const.h  0_BackgroundState.h  0_MercuryFieldCatalog.h  0_SolverFields.h  1_Boundary.h  2_Initial.h  4_Hall_Implicit.h  4_Hall_Implicit_Type.h  MercuryCase.h  MercuryGridValidation.h  MercuryPhysicsTypes.h  MercurySolver.h
Z4_Mercury/include/operators/: CTOperators.h  Dipole.h  Vector.h
Z4_Mercury/src/: MPCNSSolver_Debug.cpp  MercuryCase.cpp  MercuryGridValidation.cpp  MercurySolver.cpp  MercurySolver_Driver.cpp  MercurySolver_ReconstructionSetup.cpp  MercurySolver_Setup.cpp
Z4_Mercury/src/boundary/: Boundary.cpp  Boundary_Build.cpp  Boundary_Condition.cpp  Boundary_Condition_Fluid.cpp  Boundary_Group_tool.cpp  Boundary_Sync_.cpp
Z4_Mercury/src/implicit/: Hall_Implicit_Formfunction.cpp  Hall_Implicit_Solver.cpp  Mercury_ImplicitResistive.cpp
Z4_Mercury/src/operators/: CTOperators.cpp
Z4_Mercury/src/physics/: MercurySolver_Advance.cpp  MercurySolver_Current.cpp  MercurySolver_FluidRHS.cpp  MercurySolver_MagExplicit_Ambipo.cpp  MercurySolver_MagExplicit_Hall.cpp  MercurySolver_MagExplicit_Ideal.cpp  MercurySolver_MagExplicit_Resis.cpp  MercurySolver_MagneticCell.cpp  MercurySolver_MagneticRHS.cpp  MercurySolver_Tools.cpp
Z4_Mercury/src/tools/: MercurySolver_PrintDiag.cpp
Z5_Mercury/: CMakeLists.txt  main.cpp
Z5_Mercury/9999setup/: 0_General_Setting.txt  2_Boundary_Condition.txt  3_MHD_Control.txt
Z5_Mercury/include/: 00_Mercury_Const.h  0_MercuryFieldCatalog.h  0_SolverFields.h  1_Boundary.h  2_Initial.h  3_Control.h  4_Hall_Implicit.h  4_Hall_Implicit_Type.h  MercurySolver.h
Z5_Mercury/src/: MPCNSSolver_Debug.cpp  MercurySolver.cpp  MercurySolver_Driver.cpp  MercurySolver_Setup.cpp
docs/architecture/: ModuleBoundary.md
docs/postdata/: PostDataWriter.md
docs/topology/: TopologySpec.md
include/0_basic/: 1_MPCNS_Parameter.h  ARRAY_DEFINE.h  BoxOps.h  CONST_DEFINE.h  DEFINE.h  Direction.h  Error.h  LayoutTraits.h  MPI_WRAPPER.h  StaggerLocation.h  TYPES.h
include/1_grid/: 1_MPCNS_Grid.h  BlockTraits.h  Grid_Boundary.h  Grid_Trans.h
include/2_topology/: 2_MPCNS_Topology.h  2_MPCNS_Topology_Equiv.h  Entity.h  EntityAdapters.h  GlobalIncidence.h  LocalIncidence.h  README.md  Topology.h  TopologyBuildDetail.h  TopologyBuilder.h  TopologyDebug.h  TopologyEquiv.h  TopologyEquivDetail.h  TopologyOps.h  TopologyTypes.h  TopologyValidator.h  TopologyView.h
include/3_field/: 1_Field_Block.h  2_MPCNS_Field.h  CouplingTypes.h  Coupling_Type.h  Field.h  FieldBlock.h  FieldCatalog.h  FieldDescriptor.h  FieldStorage.h  FieldValueKind.h  (+2 more)
(+183 files in other folders)
